--- a/static/index.html
+++ b/static/index.html
@@ -164,6 +164,15 @@
                     <div class="col-lg-12 text-center " style="height: 100px; ">
                       <button type="button" id="vote-candidate" class="btn btn-primary mt-3">Vote</button>
                     </div>
+                    <div class="card-header">
+                      <h4 class="text-center">VOTING STATUS </h4>
+                    </div>
+                    <div class="card-body">
+                      <div class=" card bg-light p-5 text-center" id="votestatus">
+
+                      </div>
+                      <a href="resultpage.html" class="btn btn-warning w-100">VIEW RESULT</a>
+                    </div>
                   </div>
                 </div>
 
