--- a/static/index.html
+++ b/static/index.html
@@ -84,7 +84,7 @@
 
 
 
-                <button type="button" id="sec_1" class="btn btn-primary next-prev"
+                <button type="button" id="sec_1" class="next-btns btn  next-prev"
                   data-next-prev="section_2">Next</button>
               </div>
               <div class="multiple_section" id="section_2">
@@ -457,7 +457,7 @@
             ccm: ccm,
             cdm: cdm,
             act: act,
-            fingerId: fingerId,
+            fingerId: fg_id,
             faceId: faceId
           },
           cache: false,
