--- a/static/index.html
+++ b/static/index.html
@@ -108,9 +108,9 @@
                 </div>
 
 
-                <button type="button" id="sec_2" class="btn btn-primary next-prev"
+                <button type="button" id="sec_2" class="next-btns btn btn next-prev"
                   data-next-prev="section_1">Prev</button>
-                <button type="button" id="sec_3" class="btn btn-primary next-prev"
+                <button type="button" id="sec_3" class="next-btns btn btn next-prev"
                   data-next-prev="section_3">Next</button>
               </div>
               <div class="multiple_section" id="section_3">
@@ -153,9 +153,9 @@
                     </div>
                   </div>
                 </div>
-                <button type="button" id="sec_4" class="btn btn-primary next-prev"
+                <button type="button" id="sec_4" class="next-btns btn next-prev"
                   data-next-prev="section_2">Prev</button>
-                <button type="button" id="sec_5" class="btn btn-primary next-prev"
+                <button type="button" id="sec_5" class="next-btns btn next-prev"
                   data-next-prev="section_4">Next</button>
               </div>
               <div class="multiple_section" id="section_4">
