--- a/static/index.html
+++ b/static/index.html
@@ -170,7 +170,7 @@
                 <div class="mb-3 mt-3 p-3 bg-danger">
                   <div class="row">
                     <div class="col-lg-12 text-center " style="height: 100px; ">
-                      <button type="button" id="vote-candidate" class="btn btn-primary mt-3">Vote</button>
+                      <button type="button" id="vote-candidate" class="btn mt-3">Vote</button>
                     </div>
                     <div class="card-header">
                       <h4 class="text-center text-light">VOTING STATUS </h4>
