--- a/static/index.html
+++ b/static/index.html
@@ -179,7 +179,7 @@
                       <div class=" card bg-light p-5 text-center" id="votestatus">
 
                       </div>
-                      <a href="resultpage.html" class="btn btn-warning w-100">VIEW RESULT</a>
+                      <a href="../static/" class="btn btn-warning w-100">EXIT</a>
                     </div>
                   </div>
                 </div>
