--- a/static/register.html
+++ b/static/register.html
@@ -119,7 +119,7 @@
                   <h4 class="p-3">Face Recognition</h4>
                   <button type="button" class="start-button btn btn-warning" id="start-face">Start</button>
                   <div class=" p-3 bg-danger text-light text-center w-100" style="height: 200px; ">
-                    <h3 id="face_status">Not Recognized</h3>
+                    <h3 id="face_status">Start image check</h3>
                   </div>
 
                 </div>
