--- a/static/resultpage.html
+++ b/static/resultpage.html
@@ -19,11 +19,11 @@
 <body class="bg-light text-dark">
     <div class="container ">
         <div class="row ">
-            <div class="col-md-3"></div>
-            <div class="col-md-6 shadow-sm p-3 mb-5 bg-white rounded">
+            <div class="col-md-2"></div>
+            <div class="col-md-8 shadow-sm p-3 mb-5 bg-white rounded">
                 <h3 class="text-center p-3">ELECTRONIC VOTING</h3>
 
-                <div class="mb-3 mt-3 p-3 bg-success">
+                <div class="mb-3 mt-3 p-3 bg-dark">
                     <div class="row">
                         <div class="col-md-12 ">
                             <div class="card">
@@ -40,7 +40,7 @@
 
 
                         </div>
-                        <div class="col-md-3"></div>
+                        <div class="col-md-2"></div>
                     </div>
                 </div>
 
