modifying reg and homepage

--- a/static/index.html
+++ b/static/index.html
@@ -42,7 +42,7 @@
               </li>
             </ul>
 
-            <div class="row">
+            <div class="row bg-dark p-2">
               <div class="col-sm-4">
                 <p> Admin must login here</p>
               </div>
