--- a/static/resultpage.html
+++ b/static/resultpage.html
@@ -22,13 +22,23 @@
             <div class="col-md-2"></div>
             <div class="col-md-8 shadow-sm p-3 mb-5 bg-white rounded">
                 <h3 class="text-center p-3">ELECTRONIC VOTING</h3>
-
+                <ul class="nav justify-content-center">
+                    <li class="nav-item">
+                      <a class="nav-link active" href="../static/">VOTE</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="../static/register.html">REGISTER</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="../static/resultpage.html">RESULT</a>
+                    </li>
+                  </ul>
                 <div class="mb-3 mt-3 p-3 bg-dark">
                     <div class="row">
                         <div class="col-md-12 ">
                             <div class="card">
                                 <div class="card-body">
-                                    <button type="button" class="btn btn-success w-100" id="train">RESULT PAGE</button>
+                                    <button type="button" class="btn btn-success w-100" id="train">RESULT</button>
                                 </div>
                             </div>
                             <div id="result" class="card p-2">
