--- a/static/resultpage.html
+++ b/static/resultpage.html
@@ -24,21 +24,16 @@
                 <h3 class="text-center p-3">ELECTRONIC VOTING</h3>
                 <ul class="nav justify-content-center">
                     <li class="nav-item">
-                      <a class="nav-link active" href="../static/">VOTE</a>
+                      <a class="nav-link active" href="../static/">HOME</a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="../static/register.html">REGISTER</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="../static/resultpage.html">RESULT</a>
-                    </li>
+                   
                   </ul>
                 <div class="mb-3 mt-3 p-3 bg-dark">
                     <div class="row">
                         <div class="col-md-12 ">
                             <div class="card">
                                 <div class="card-body">
-                                    <button type="button" class="btn btn-success w-100" id="train">RESULT</button>
+                                    <button type="button" class="btn btn-primary w-100" id="train">RESULT</button>
                                 </div>
                             </div>
                             <div id="result" class="card p-2">
