--- a/static/index.html
+++ b/static/index.html
@@ -42,8 +42,8 @@
               </li>
             </ul>
 
-            <div class="row bg-dark p-2">
-              <div class="col-sm-4">
+            <div class="row bg-dark p-3 text-light">
+              <div class="col-sm-4 ">
                 <p> Admin must login here</p>
               </div>
               <div class="col-sm-8">
