modifying reg and homepage

--- a/static/index.html
+++ b/static/index.html
@@ -34,9 +34,7 @@
               <li class="nav-item">
                 <a class="nav-link active" href="../static/">VOTE</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../static/register.html">REGISTER</a>
-              </li>
+             
               <li class="nav-item">
                 <a class="nav-link" href="../static/resultpage.html">RESULT</a>
               </li>
@@ -44,7 +42,7 @@
 
             <div class="row bg-dark p-3 text-light">
               <div class="col-sm-4 ">
-                <p> Admin must login here</p>
+                <p style="font-size: 22px"> Admin must login here</p>
               </div>
               <div class="col-sm-8">
                 <form class="form-inline">
