--- a/static/admin.html
+++ b/static/admin.html
@@ -106,8 +106,9 @@
           $('#delete-data').click(function (e) {
             var i=0;
             for(i=1; i<=127; i++){
-              socket.send("d");
-
+              setTimeout(function () {
+                  socket.send("d");
+                }, 500);
             }
            
           });
