modifying reg and homepage

--- a/static/index.html
+++ b/static/index.html
@@ -203,7 +203,7 @@
                       <div class=" card bg-light p-5 text-center" id="votestatus">
 
                       </div>
-                      <a href="../static/" class="btn btn-warning w-100">EXIT</a>
+                      <a href="../static/">EXIT</a>
                     </div>
                   </div>
                   <br>
