--- a/static/admin.html
+++ b/static/admin.html
@@ -112,6 +112,7 @@
                 data: {},
                 cache: false,
                 success: function (data) {
+                  alert(data);
                   $("#deleted").html(data)
                 },
                 error: function (xhr, status, error) {
