--- a/static/admin.html
+++ b/static/admin.html
@@ -96,7 +96,7 @@
               var train_res = data.train;
               console.log(train_res);
               console.log(res);
-              $("#deleted").html(res);
+              //$("#deleted").html(res);
             }
             
             $('#delete-data').click(function (e) {
