modifying reg and homepage

--- a/static/register.html
+++ b/static/register.html
@@ -133,7 +133,7 @@
           <div class="card">
             <div class="card-body">
               <button type="button"  class="btn btn-warning w-100" id="submit-btn">Register</button>
-            <p id="reg-status" class="p-3 bg-light text-danger"></p>
+            <p id="reg-status" class="p-3 bg-light text-danger text-center mt-3"></p>
             </div>
           </div>
 
