modifying reg and homepage

--- a/static/register.html
+++ b/static/register.html
@@ -38,7 +38,7 @@
             <a class="nav-link" href="../static/admin.html">LOGIN</a>
           </li>
         </ul>
-        <form id="register-form " class="bg-white p-3">
+        <form id=" " class="bg-white p-3">
           <div>
             <p class=" bg-warning p-2 text-center">REGISTER</p>
           </div>
